base/frontend/istio/authorizationpolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: frontend
  namespace: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              [
                "cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account",
                "cluster.local/ns/loadgenerator/sa/loadgenerator",
              ]
